# RL-RocketPy-Notebook

./: .gitignore  README.md  launch_viewer.py  main.py  pyproject.toml  test_config.py
data/: AeroTech_M2500T.eng  AeroTech_M2500T_smoothed.csv  AeroTech_M2500T_smoothed.eng  drag_curve_clean.csv
notebooks/v-10/: SENSORS_README.md  jr.ipynb  jr.md  rocket_config.py  v-10.md  v-10_flight_sim.ipynb
notebooks/v-10-jose/: parameters.json  simulation.ipynb
serializer/: INSTRUCTIONS.md  v-10-jose.ork  v-10-santos.ork
serializer/v-10-jose/: drag_curve.csv  thrust_source.csv  thrust_source_clean.csv
sim/: __init__.py  rocket_renderer.py
sim/cache/: __init__.py  mesh_cache.py
sim/geometry/: __init__.py  extraction.py  mesh_builders.py
sim/gui/: __init__.py  rocket_viewer_app.py
sim/rendering/: __init__.py  renderer.py
