[project]
name = "rl-rocketpy-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.10",
    "ipykernel>=6.29.5",
    "pandas>=2.3.3",
    "rocketpy>=1.10.0",
    "rocketserializer>=0.2.0",
    "scipy>=1.16.2",
    "pyvista>=0.46.4",
    "trame>=3.12.0",
    "PySide6>=6.5.0",
    "pyvistaqt>=0.11.0",
]
